--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,7 +105,7 @@
   overflow: hidden;
   background: #ffffff;
   background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0.92)),
-    url("/assets/img/banner.jpg");
+    url("../img/banner.jpg");
   background-repeat: no-repeat, no-repeat, no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -238,7 +238,7 @@
       rgba(0, 0, 0, 0.7),
       rgba(0, 0, 0, 0.33)
     ),
-    url("/assets/img/bg.jpg");
+    url("../img/bg.jpg");
   background-repeat: no-repeat, no-repeat, no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -548,7 +548,7 @@
       rgba(247, 249, 252, 0.77),
       rgba(247, 249, 252, 0.77)
     ),
-    url("/assets/img/b2.jpg");
+    url("../img/b2.jpg");
   background-repeat: no-repeat, no-repeat, no-repeat;
   background-position: center;
   background-attachment: fixed;
